# assistant-veille-tech

./: .env.example  CLAUDE.md  Dockerfile.backend  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  chat.py  config.py  main.py  schemas.py
app/ingest/: __init__.py  chroma_upsert.py  news_api.py  topics.py  twitter.py  utils.py
app/ingest/twitter/: __init__.py  ingester.py  parser.py
app/rag/: chroma_client.py  llm.py  retrieval.py
app/runtime/: __init__.py  fresh_news.py
resources/: schema.mmd
scripts/: ingest_cli.py
tests/acceptance/: conftest.py  ingest_helpers.py  news_api_fakes.py  test_chroma_upsert.py  test_fresh_news.py  test_news_api_ingester.py  test_twitter_ingester.py  twitter_fakes.py
tests/fixtures/: news.json
web/lib/: api.ts
